added docs for logout
