# docs/swagger.yaml
@@ -51,6 +51,13 @@ definitions:
       username:
         type: string
     type: object
+  domains.SuccessResponse:
+    properties:
+      message:
+        type: string
+      status:
+        type: string
+    type: object
 host: localhost:9000
 info:
   contact: {}
@@ -59,6 +66,39 @@ info:
   version: "1.0"
 paths:
   /authentications:
+    delete:
+      consumes:
+      - application/json
+      description: Signing User Out. Requires refresh token
+      parameters:
+      - description: refresh token possessed by the user
+        in: body
+        name: refreshToken
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domains.SuccessResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/domains.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/domains.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/domains.ErrorResponse'
+      summary: Sign Out
+      tags:
+      - authentication
     post:
       consumes:
       - application/json
